# sysopy

./: .gitignore
cw01/zad1/: Makefile  Makefile~  fib.c  fmath.c  size_test.cpp  size_test_input  unroll.c  wyniki.txt
cw01/zad2/: Makefile  Makefile~  core.8848  faulty.c  fib.c  loop.c  zada-logs  zadb-logs  zadc-logs
cw01/zad3/: Makefile  Makefile~
cw01/zad3auto/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  configure.ac~
cw01/zad3auto/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
cw01/zad3auto/src/: Makefile  Makefile.am  Makefile.am~  Makefile.in
cw01/zad3auto/src/.deps/: macierze-macierz.Po  macierze-main.Po
cw01/zad3auto/src/include/: Makefile  Makefile.in
cw01/zad3auto/src/operacje/: Makefile  Makefile.am~  Makefile.in  iloczyn.c  roznica.c  suma.c
cw01/zad3auto/src/operacje/.deps/: liboperacje_a-iloczyn.Po  liboperacje_a-macierz.Po  liboperacje_a-roznica.Po  liboperacje_a-suma.Po
cw01/zad3auto/src/reszta/: Makefile  Makefile.in  macierz.c
cw01/zad3auto/src/we_wy/: Makefile  Makefile.am  Makefile.am~  Makefile.in  wczytaj_konsola.c  wczytaj_plik.c  wypisz_konsola.c  wypisz_plik.c
cw01/zad3auto/src/we_wy/.deps/: libwe_wy_a-macierz.Po  libwe_wy_a-wczytaj_konsola.Po  libwe_wy_a-wczytaj_plik.Po  libwe_wy_a-wypisz_konsola.Po  libwe_wy_a-wypisz_plik.Po
cw02/zad1/: Makefile  Makefile.in  README  aclocal.m4  config.h  config.h.in~  config.status  configure  configure.ac  configure.ac~  libtool
cw02/zad1/src/: Makefile  mymem.c  (+3 more)
cw02/zad2/: README  autogen.sh  configure.ac
cw02/zad2/lib/: install_mymem.sh
cw02/zad2/src/: Makefile.am  mymat.c
cw02/zad2/src/include/: mymat.h  mymem.h
cw02/zad3/: Makefile
cw03/zad1/: Makefile  test1.txt  test1cp.txt  wyniki.txt  zad1.c
cw03/zad3/: Makefile  test.txt  zad3.c
cw04/zad1/: Makefile  zad1.c
cw04/zad2/: Makefile  archiwizuj.c  dopisz.c  test.txt
cw04/zad3/: Makefile  policz.c
cw05/zad1/: Makefile  README  config.h  config.h.in  config.status  configure  configure.ac  zad1.c
cw05/zad2/: Makefile  config.h  config.h.in  config.status  configure  configure.ac  zad2.c
cw05/zad3/: Makefile  zad3aRec.c  zad3aSend.c  zad3bRec.c  zad3bSend.c  zad3cRec.c  zad3cSend.c
cw06/zad1/: Makefile  file.txt  zad1.c
cw06/zad2/: Makefile  generator.c  tester.c
cw06/zad3/: Makefile  dodaj_plik.c  plik2  plik3  policz.c
cw06/zad4/: Makefile  zad4.c
cw07/zad1a/: client.c  commons.h  server.c
cw07/zad1b/: client.c  commons.h  server.c
cw07/zad2a/: client.c  commons.h  server.c
cw07/zad2c/: Makefile  client.c  commons.h  server.c
cw08/zad1/: commons.h  konsument.c  makefile  producent.c  types.h
cw08/zad2/: commons.h  czytelnik.c  makefile  pisarz.c  types.h
cw09/zad1/: makefile  testfile.txt  zad1.c
cw09/zad2/: makefile  zad2.c  zad2.raport
cw10/zad1/: client.c  commons.h  server.c
cw10/zad2/: client.c  commons.h  klient.c  makefile  server.c  serwer.c  structures.h
(+57 files in other folders)
